--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "randomstring": "^1.1.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "redux": "^4.0.5"
     },
     "scripts": {
         "predeploy": "npm run build",
